public/css/videoChatPlayer.css
/* ... */
#collapseChat .collapsetooltiptext::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent #464649;
}

#collapseChat svg {
  fill: #dedede;
}
#collapseChat:hover svg {
  fill: #ffffff;
}
#collapseChat:hover .collapsetooltiptext {
  visibility: visible;
}

#chatCover:hover {
	background-color: #2b2b2f;
	cursor: pointer;
}
#chatCover {
	height: 100%;
	width: 25px;
	position: absolute;
	bottom: 0;
	right: 0;
	border-left: 1px solid #303032;
	border-top: 1px solid #303032;
	border-bottom: 1px solid #303032;
	background-color: #1f1f23;
}
#chatCover svg{
	fill: white;
	position: absolute;
	
}
#chat {
	position: absolute;
	bottom: 0;
	right: 0;
    width: 332px;
    border-left: 1px solid #303032;
	border-top: 1px solid #303032;
    height: calc(100% - 96px);
	overflow-y: scroll;
	background-color:#18181b;
 	font-family: "Inter";
	color: rgb(222, 222, 227);
	font-size: 13px;
	font-weight: 400;
	line-height: 20px;
	overflow-x: hidden;
	scrollbar-width: thin;
	/* scrollbar-width: none; */
	padding-bottom: 5px;
	padding-right: 8px;
}

#autoscroller {
	position: absolute;
	bottom: 0;
	right: 0;
	width: 340px;
	height: 40px;
	z-index: 99;
	border-top: 1px solid #303032;
	background-color: #18181b;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	text-align: center;
	display:flex;
	justify-content:center
	
}
#autoscrollerTEXT {
	margin: auto;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	text-align: center;
	vertical-align: middle;
	
}
#autoscroller:hover {
	background-color: #464649;
	cursor: pointer;
	transition: 100ms all ease;	
}

/* Test Message formatting */

.issubmessage {
	border-left-color: #a970ff;
	border-left-style: solid;
	border-left-width: 6px;
	background-color: #1f1f23;
}
.issubmessage .commenter{
	position: relative;
	top: 8px;
	left: 10px;
	margin: 0;
	display: block;
	font-weight: 700;
	display: inline-block;
}
.issubmessage .chatmessage{
	position: relative;
	margin: 0 auto 10px 45px;
	display: block;
}
.issubmessage .subResubTheyve{
	position: relative;
	margin-left: 5px;
}
.issubmessage .userComment .chatmessage{
	margin: 0;
	display: inline;
}
.userComment {
	display: block;
	margin-bottom: 10px;
	margin-left: 16px;
}

.issubmessage .commenter2{
	position: relative;
	left: 0;
	margin: 0;
	display: inline;
	font-weight: 700;
	display: inline-block;
	vertical-align: top;
}
.commenter2:hover{
	border-radius: 2px;
	background-color: rgba(255, 255, 255, 0.2);
	cursor: pointer;
}
.smallgifticon {
	margin-left: 15px;
	position: relative;
	top: 50%;
	-webkit-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
	float: left;
	height: 20px;
	width: 20px;
}
.primeicon {
	margin: 9px auto auto 15px;
	width: 20px;
	height: 20px;
	display: inline-block;
}
.staricon {
	margin: 9px auto auto 15px;
	width: 20px;
	height: 20px;
	display: inline-block;
}
.primeSub {
	position: relative;
	margin: 0;
	fill: #a970ff;
	width: 16px;
	height: 11px;
}
.prime {
	color: #a970ff;
}
.tierOneSub {
	position: relative;
	margin: 0;
	fill: #adadb8;
	width: 16px;
	height: 11px;
}
.subgift {
	fill: #efeff1;
}
.issubgift {
	margin-top: -4px;
}

.subgiftcontainer {
	padding: 5px 0;
}.subgiftcontainer .chatmessage{
	margin: 0;
}
.subgiftcontainer .reciever  {
	font-weight: 900;
}
.subgiftcontainer .middlemessage  {
	color: #adadb8;
}
.subgiftcontainer .exclamation  {
	color: #adadb8;
}
.subgiftcontainer .theyvecontainer  {
	color: #adadb8;
}

.giftednumber {
	color: white;
	font-weight: 700;
}
.giftingnumber {
	color: white;
	font-weight: 700;
}


.issubgift .subgiftcontainer{
	margin-left: 55px;
}
.issubgift .subgiftcontainer .chatmessage{
	margin-left: 0;
}
.issubgift .issubmessage svg{
	margin-top: auto;
	margin-left: 15px;
	display: inline;
	vertical-align: middle;
}
.issubgift .commenter{
}

.isbiggiftsubmessage {
	border-left-color: #a970ff;
	border-left-style: solid;
	border-left-width: 6px;
	background-color: #1f1f23;
	margin: 0;
}
.isbiggiftsubmessage .commenter{
	position: relative;
	top: 12px;
	left: 9px;
	margin: 0;
	display: block;
	font-size: 16px;
	font-weight: 900;
	display: inline-block;
}
.isbiggiftsubmessage .bigsubgiftcontainer{
	position: relative;
	margin: -16px auto 14px 65px;
	display: block;
	color: #adadb8;
}
.isbiggiftsubmessageimg {
	position: relative;
	margin: 9px auto auto 15px;
	width: 40px;
	height: 40px;
}
.cheer {
	position: relative;
	width: 28px;
	height: 28px;
	margin: -4px 2px 0 2px;
}
.cheer1 {
	margin-right: 4px;
	font-weight: 900;
	color: #6a696e;
}
.cheer100 {
	margin-right: 4px;
	font-weight: 900;
	color: #913df7;
}
.cheer1000 {
	margin-right: 4px;
	font-weight: 900;
	color: #3fd1be;
}
.cheer5000 {
	margin-right: 4px;
	font-weight: 900;
	color: #2472d4;
}
.cheer10000 {
	margin-right: 4px;
	font-weight: 900;
	color: #ff2b28;
}
.cheer100000 {
	margin-right: 4px;
	font-weight: 900;
	color: #f1921a;
}

.badge {
	margin-right: 3px;
}
.badge-size {
	margin-right: 3px;
	height: 18px;
	width: 18px;
}

/* Tier 2 Sub Animation */

.animated-tier-star__star {
  fill: #adadb8;
  transform-origin: center;
}

.animated-tier-star__swipe {
  height: 100%;
  transform: translate(-100%);
  transform-origin: center;
  width: 20px;
}

.animated-tier-star--tier-2 .animated-tier-star__swipe--1 {
  -webkit-animation: t2-swipe-1 3s linear 0s infinite;
  animation: t2-swipe-1 3s linear 0s infinite;
}

.animated-tier-star--tier-2 .animated-tier-star__swipe--2 {
  -webkit-animation: t2-swipe-2 3s linear 0s infinite;
  animation: t2-swipe-2 3s linear 0s infinite;
}
/* ... */

